# deepweeds-kerascv

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cuda_requirements.in  cuda_requirements.txt  docker-compose.yaml  mac_requirements.in  mac_requirements.txt  main.py  pyproject.toml  requirements.in  train.py
conf/: config.yaml
multirun/2024-07-04/14-32-23/: multirun.yaml
multirun/2024-07-04/14-32-23/0/: train_log.csv
multirun/2024-07-04/14-32-23/1/: train_log.csv
multirun/2024-07-04/14-32-23/2/: train_log.csv
multirun/2024-07-04/14-32-23/3/: train_log.csv
multirun/2024-07-05/12-40-11/: multirun.yaml
multirun/2024-07-05/12-40-11/0/: train_log.csv
multirun/2024-07-05/12-40-11/1/: train_log.csv
multirun/2024-07-05/12-40-11/2/: train_log.csv
multirun/2024-07-05/12-40-11/3/: train_log.csv
multirun/2024-07-06/11-52-54/: multirun.yaml
multirun/2024-07-06/11-52-54/0/: train_log.csv
multirun/2024-07-06/11-52-54/1/: train_log.csv
multirun/2024-07-06/11-52-54/2/: train_log.csv
multirun/2024-07-06/11-52-54/3/: train_log.csv
multirun/2024-07-06/14-41-57/: multirun.yaml
multirun/2024-07-06/14-41-57/0/: train_log.csv
multirun/2024-07-06/14-41-57/1/: train_log.csv
multirun/2024-07-06/14-41-57/2/: train_log.csv
multirun/2024-07-06/14-41-57/3/: train_log.csv
multirun/2024-07-07/14-11-23/: multirun.yaml
multirun/2024-07-07/14-11-23/0/: train_log.csv
multirun/2024-07-07/14-11-23/1/: train_log.csv
multirun/2024-07-07/14-11-23/2/: train_log.csv
multirun/2024-07-07/14-11-23/3/: train_log.csv
multirun/2024-07-07/14-11-23/4/: train_log.csv
multirun/2024-07-08/07-41-54/: multirun.yaml
multirun/2024-07-08/07-41-54/0/: train_log.csv
multirun/2024-07-08/07-41-54/1/: train_log.csv
multirun/2024-07-08/07-41-54/2/: train_log.csv
notebooks/: 02_data.ipynb  03_convnext.ipynb  04_eval.ipynb  05_inference.ipynb  06_tensorrt.ipynb  07_api_tests.ipynb
outputs/2024-07-01/20-55-55/: train_log.csv
outputs/2024-07-02/09-13-10/: train_log.csv
outputs/2024-07-02/10-05-45/: train_log.csv
outputs/2024-07-02/10-41-02/: train_log.csv
outputs/2024-07-02/11-25-53/: train_log.csv
outputs/2024-07-02/12-00-41/: train_log.csv
outputs/2024-07-02/16-11-48/: train_log.csv
outputs/2024-07-02/17-26-43/: train_log.csv
outputs/2024-07-02/17-45-06/: train_log.csv
outputs/2024-07-04/11-53-02/: train_log.csv
outputs/2024-07-04/12-30-43/: train_log.csv
outputs/2024-07-04/12-51-09/: train_log.csv
outputs/2024-07-04/14-00-05/: train_log.csv
outputs/2024-07-04/17-22-41/: train_log.csv
outputs/2024-07-04/18-29-24/: train_log.csv
outputs/2024-07-04/18-40-39/: train_log.csv
outputs/2024-07-04/18-42-58/: train_log.csv
outputs/2024-07-04/19-48-02/: train_log.csv
outputs/2024-07-05/12-17-46/: train_log.csv
outputs/2024-07-05/17-15-23/: train_log.csv
outputs/2024-07-05/18-05-46/: train_log.csv
outputs/2024-07-05/18-34-55/: train_log.csv
outputs/2024-07-05/19-38-39/: train_log.csv
outputs/2024-07-06/10-59-00/: train_log.csv
outputs/2024-07-07/09-50-44/: train_log.csv
outputs/2024-07-07/10-46-37/: train_log.csv
outputs/2024-07-07/12-37-26/: train_log.csv
outputs/2024-07-07/12-49-19/: train_log.csv
outputs/2024-07-07/18-54-32/: train_log.csv
outputs/2025-02-20/14-04-37/: train_log.csv
src/: models.py  processing.py  train.py
src/datasets/: deep_weeds.py
src/deepweeds/: models.py  train.py  tune.py  utils.py
(+559 files in other folders)
