[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
authors = [
  { name="Christopher Michael-Stokes", email="christophermichaelstokes@gmail.com" },
]
description = "Python modules for object detection in keras. This is not intended for distribution."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ChristopherMichael-Stokes/deepweeds-kerascv"
Issues = "https://github.com/ChristopherMichael-Stokes/deepweeds-kerascv/issues"